[package]
name = "sevenk"
version = "0.0.1"
edition = "2024"
resolver = "2"

[dependencies]
anyhow = "1.0"
reqwest = "0.12.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
chrono = "0.4.39"
tokio = { version = "1.40", features = ["full"] }

[dependencies.sui_sdk]
git = "https://github.com/mystenlabs/sui"
tag = "testnet-v1.39.3"                   # must match sui/boat_fun/Move.toml
package = "sui-sdk"

[dependencies.sui_keys]
git = "https://github.com/mystenlabs/sui"
tag = "testnet-v1.39.3"                   # must match sui/boat_fun/Move.toml
package = "sui-keys"

[dependencies.move_core_types]
git = "https://github.com/mystenlabs/sui"
tag = "testnet-v1.39.3"                   # must match sui/boat_fun/Move.toml
package = "move-core-types"

[dependencies.shared_crypto]
git = "https://github.com/mystenlabs/sui"
tag = "testnet-v1.39.3"                   # must match sui/boat_fun/Move.toml
package = "shared-crypto"

[dependencies.sui_transaction_builder]
git = "https://github.com/mystenlabs/sui"
tag = "testnet-v1.39.3"                   # must match sui/boat_fun/Move.toml
package = "sui-transaction-builder"
